--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta property="og:description" content="El mejor cafe que vendemos." />
     
     <meta property="og:url" content="https://http://www.AlegreCafe.com" />
-    <meta name="twitter:card" content="summary_large_image" />
+   
 
     <title>AlegreCafe</title>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="asstes/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- icons -->
 
   </head>
@@ -117,27 +117,27 @@
       <!-- gallery -->
       <section class="galler gallery">
         <img
-          src="/asstes/img/gallery/img1.jpg"
+          src="/assets/img/gallery/img1.jpg"
           alt=" gallery img1"
           class="gallery-img-1"
         />
         <img
-          src="/asstes/img/gallery/img2.jpg"
+          src="/assets/img/gallery/img2.jpg"
           alt=" gallery img2"
           class="gallery-img-2"
         />
         <img
-          src="/asstes/img/gallery/img3.jpg"
+          src="/assets/img/gallery/img3.jpg"
           alt=" gallery img3"
           class="galller1 gallery-img-3"
         />
         <img
-          src="/asstes/img/gallery/img4.jpg"
+          src="/assets/img/gallery/img4.jpg"
           alt=" gallery img4"
           class="gallery-img-4"
         />
         <img
-          src="/asstes/img/gallery/img5.jpg"
+          src="/assets/img/gallery/img5.jpg"
           alt=" gallery img5"
           class="gallery-img-5"
         />
@@ -158,7 +158,7 @@
           <div class="card-product">
             <div class="container-img">
               <img
-                src="/asstes/img/products/cafeirlandes.png"
+                src="/assets/img/products/cafeirlandes.png"
                 alt="cafe cafe-irish"
               />
               <span class="discount">-13%</span>
@@ -193,7 +193,7 @@
           <div class="card-product">
             <div class="container-img">
               <img
-                src="asstes/img/products/cafeamericano.png"
+                src="assets/img/products/cafeamericano.png"
                 alt=" cafe-ingles"
               />
               <div class="button-group">
@@ -227,7 +227,7 @@
           <div class="card-product">
             <div class="container-img">
               <img
-                src="/asstes/img/products/cafecaribeno.png"
+                src="/assets/img/products/cafecaribeno.png"
                 alt="cafe-caribeno"
               />
               <span class="discount">-13%</span>
@@ -262,7 +262,7 @@
           <div class="card-product">
             <div class="container-img">
               <img
-                src="/asstes/img/products/expresopanna.png"
+                src="/assets/img/products/expresopanna.png"
                 alt="cafe-expresso-panna"
               />
               <div class="button-group">
@@ -304,7 +304,7 @@
           <!-- Producto 1 -->
           <div class="card-product">
             <div class="container-img">
-              <img src="/asstes/img/products/cafearabe.png" alt="Cafe Arabe" />
+              <img src="/assets/img/products/cafearabe.png" alt="Cafe Arabe" />
               <span class="discount">-13%</span>
               <div class="button-group">
                 <span>
@@ -337,7 +337,7 @@
           <div class="card-product">
             <div class="container-img">
               <img
-                src="asstes/img/products/cafehawaiani.png"
+                src="assets/img/products/cafehawaiani.png"
                 alt="Cafe Hawaiano"
               />
               <span class="discount">-22%</span>
@@ -371,7 +371,7 @@
           <!--  -->
           <div class="card-product">
             <div class="container-img">
-              <img src="/asstes/img/products/cafelate.png" alt="Cafe latte" />
+              <img src="/assets/img/products/cafelate.png" alt="Cafe latte" />
               <span class="discount">-30%</span>
               <div class="button-group">
                 <span>
@@ -404,7 +404,7 @@
           <div class="card-product">
             <div class="container-img">
               <img
-                src="/asstes/img/products/macchiato.png"
+                src="/assets/img/products/macchiato.png"
                 alt="Cafe Macchiato"
               />
               <div class="button-group">
@@ -443,7 +443,7 @@
 
                 <div class="card-blog">
                     <div class="container-img">
-                        <img src="/asstes/img/blog/imgblog1.jpg" alt="imagen blog 1">
+                        <img src="/assets/img/blog/imgblog1.jpg" alt="imagen blog 1">
                         <div class="button-group-blog">
                             <span>
                                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -464,7 +464,7 @@
 
                 <div class="card-blog">
                     <div class="container-img">
-                        <img src="/asstes/img/blog/imgblog2.jpg" alt="imagen blog 2">
+                        <img src="/assets/img/blog/imgblog2.jpg" alt="imagen blog 2">
                         <div class="button-group-blog">
                             <span>
                                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -485,7 +485,7 @@
 
                 <div class="card-blog">
                     <div class="container-img">
-                        <img src="/asstes/img/blog/imgblog3.jpg" alt="imagen blog 3">
+                        <img src="/assets/img/blog/imgblog3.jpg" alt="imagen blog 3">
                         <div class="button-group-blog">
                             <span>
                                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -572,16 +572,16 @@
                     Copyright &copy; AlegreCafe . 2025 All Right Reserved
                 </p>
 
-                <img src="/asstes/img/pay/payment.png" alt="Pagos">
+                <img src="/assets/img/pay/payment.png" alt="Pagos">
             </div>
         </div>
     </footer>
 
     </main>
   </body>
-  <script src="/asstes/js/main.js" type="module"></script>
+  <script src="/assets/js/main.js" type="module"></script>
   <!-- scroll reveal js -->
-  <script src="/asstes/js/scrollreveal.min.js"></script>
+  <script src="/assets/js/scrollreveal.min.js"></script>
   <script
     src="https://kit.fontawesome.com/a897891e72.js"
     crossorigin="anonymous"
